# yral-mobile

./: .editorconfig  .env.example  .envrc.example  .firebaserc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Gemfile  H2H-IMPLEMENTATION-PLAN.md  HANDOFF-CHAT-AS-HUMAN.md  HANDOFF-SSE-STREAMING.md  LICENSE  MOBILE-EXPERT-LESSONS.md  POST-MORTEM-CHAT-AS-HUMAN.md  README.md  SSE-IMPLEMENTATION-PLAN.md  build.gradle.kts  checks.sh  compose_compiler_config.conf  detekt-config.yml  firebase.json  firestore.indexes.json  gradle.properties  linear-issue-history.md  mise.toml  pyproject.toml  rust-toolchain.toml  settings.gradle.kts  todo.md
.devcontainer/: devcontainer.json  devcontainer.json.bak  postCreate.sh  postCreate.sh.bak
.github/: copilot-instructions.md  dependabot.yml
.github/helperscripts/: cleanup_release_notes_for_google_chat.sh  resolve_next_android_flavor_version.sh  resolve_next_prod_android_version.sh  test_resolve_next_android_flavor_version.sh  test_resolve_next_prod_android_version.sh
.github/workflows/: android-play-store-distribution.yml  android-tag-release.yml  apk-preview.yml  app-preview.yml  checks.yml  deploy-prod-app-to-ios-app-store-on-release.yml  deploy-prod-app-to-play-store-on-release.yml  deploy-staging-app-to-apple-app-store-on-merge-to-main.yml  deploy-staging-app-to-play-store-on-merge-to-main.yml  deploy-yral-alpha-to-app-and-play-store.yml  detekt-sarif.yml  did-notifier.yml  ios-ad-hoc-distribution.yml  ios-prod-distribution.yml  ios-staging-distribution.yml  kotlin-lint-build-test.yml  kotlintlint.yml  run-all-tests-on-every-pull-request.yml  run-gradle-tests-on-every-push.yml  rust-lib-publish.yml  swift-lint-build-test.yml  swiftlint.yml
androidApp/: build.gradle.kts  my-debug-key.keystore  proguard-rules.pro
build-logic/: README.md
build-logic/convention/: build.gradle.kts
checks/: build.gradle.kts
composeApp/: build.gradle.kts
docs/: ai-video-gen-api-integration.md  firebase-cleanup-and-feature-removal.md  firebase-removal-summary.md  performance-tracing.md
docs-rishi/: HANDOFF-SSE-STREAMING.md  MOBILE-EXPERT-LESSONS.md  PLAN-CHAT-AS-HUMAN.md  SSE-IMPLEMENTATION-PLAN.md  SSE-PHASE5B-PLAN.md  SSE-PLANNING-NOTES.md
fastlane/: Fastfile
functions/: constants.py  hot_or_not_tournament.py  main.py  requirements.txt
functions/logger/: __init__.py
functions/migrations/: backfill_daily_ban_flag.py  backfill_users_ban_and_airdrops.py
functions/scripts/: backfill_smiley_game_win_loss.py  create_10min_tournaments.py  create_half_hourly_tournaments.py  create_minute_tournaments.py  create_single_tournament.py  create_test_tournament.py  create_two_test_tournaments.py  fix_laugh_tallies.py  get_tournament_leaderboard.py  reset_all_vote_count.py  reset_all_vote_count_and_seed_votes.py  reset_vote_count.py  send_manual_btc_rewards.py  tournament.py  update_tournaments_to_5min.py  video_smiley_count.py  voted_video_ids_for_multiple_principals.py  voted_video_ids_for_principal.py
functions/tournaments/: __init__.py  daily_tournament.py  tournament_api.py  tournaments.py
git-submodules/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: .swiftlint.yml  BridgingHeader.h  Podfile  Yral-Staging.entitlements  Yral.entitlements  build-rust.sh
iosApp/Prod/: GoogleService-Info.plist  Info.plist
iosApp/Staging/: GoogleService-Info.plist  Info-Staging.plist
iosApp/YralTests/: YralTests.swift
iosApp/fastlane/: Fastfile
iosApp/iosApp/: ContentView.swift  (+8 more)
iosSharedUmbrella/: build.gradle.kts  iosSharedUmbrella.podspec
rust-agent/: Cargo.toml  build.rs
rust-agent/src/: lib.rs
rust-agent/src/import/: mod.rs  sns_governance.rs  sns_index.rs  sns_ledger.rs
rust-agent/src/individual_user_template/: individual_user_template_ffi.rs  individual_user_template_helper.rs  mod.rs  user_post_service_helper.rs
rust-agent/src/ledger/: ledger_ffi.rs  mod.rs
rust-agent/src/platform_orchestrator/: mod.rs  platform_orchestrator_ffi.rs
rust-agent/src/post_cache/: mod.rs  post_cache_ffi.rs
rust-agent/src/sns_governance/: mod.rs  sns_governance_ffi.rs
rust-agent/src/sns_index/: mod.rs  sns_index_ffi.rs
rust-agent/src/sns_ledger/: mod.rs  sns_ledger_ffi.rs
rust-agent/src/sns_root/: mod.rs  sns_root_ffi.rs
rust-agent/src/sns_swap/: mod.rs  sns_swap_ffi.rs
shared/: build.gradle.kts
shared/rust/rust-agent-uniffi/: Cargo.toml
shared/rust/rust-agent-uniffi/did/: individual_user_template.did  platform_orchestrator.did  user_index.did
shared/rust/rust-agent-uniffi/src/: commons.rs  lib.rs  uni_ffi_helpers.rs
shared/rust/rust-agent-uniffi/src/individual_user_template/: individual_user_template_helper.rs  mod.rs
shared/rust/rust-agent-uniffi/src/platform_orchestrator/: mod.rs
shared/rust/rust-agent-uniffi/src/post_cache/: mod.rs
shared/rust/rust-agent-uniffi/src/rate_limits/: mod.rs
shared/rust/rust-agent-uniffi/src/sns_governance/: mod.rs
shared/rust/rust-agent-uniffi/src/sns_index/: mod.rs
shared/rust/rust-agent-uniffi/src/sns_ledger/: mod.rs
shared/rust/rust-agent-uniffi/src/sns_root/: mod.rs
shared/rust/rust-agent-uniffi/src/sns_swap/: mod.rs
shared/rust/rust-agent-uniffi/src/user_post_service/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/: Cargo.toml  uniffi.toml
shared/rust/rust-agent/rust-agent-uniffi/src/: commons.rs  helpers.rs  lib.rs  logger.rs  uni_ffi_helpers.rs
shared/rust/rust-agent/rust-agent-uniffi/src/individual_user_template/: individual_user_template_helper.rs  mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/ledger/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/platform_orchestrator/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/rate_limits/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/sns_ledger/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/sns_root/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/sns_swap/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/user_info_service/: mod.rs
shared/rust/rust-agent/rust-agent-uniffi/src/user_post_service/: mod.rs
(+2924 files in other folders)
