[package]
name = "yral-mobile-swift-binding"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
swift-bridge-build = "0.1.57"

[lib]
crate-type = ["staticlib"]

[dependencies]
swift-bridge = {version = "0.1.57", features = ["async"]}
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
ic-agent = "0.38.2"
lazy_static = "1.4"
candid = "0.10.10"
serde = "1.0.213"
serde_json = "1.0.132"
serde_bytes = "0.11.15"
k256 = { version = "0.13.4", default-features = false, features = [
    "std",
    "jwk",
] }
yral-types = { git = "https://github.com/yral-dapp/yral-common.git", branch = "master"}
yral-canisters-common = { git = "https://github.com/yral-dapp/yral-common.git", branch = "master"}
yral-canisters-client = {git = "https://github.com/yral-dapp/yral-common.git", branch = "master"}
yral-metadata-types = { git = "https://github.com/yral-dapp/yral-metadata.git", branch = "master" }
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata.git", branch = "master" }
