[package]
name = "yral-mobile-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "yral_mobile_uniffi"

[dependencies]
uniffi = { version = "0.28.3", features = [ "cli" ] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
ic-agent = "0.38.2"
lazy_static = "1.4"
candid = "0.10.10"
serde = "1.0.213"
serde_json = "1.0.132"
serde_bytes = "0.11.15"
k256 = { version = "0.13.4", default-features = false, features = [
    "std",
    "jwk",
] }
yral-types = { git = "https://github.com/yral-dapp/yral-common.git", rev = "18b20f6bc2caccbdb8af0d16f8e80d1806ea4a79" }
yral-canisters-common = { git = "https://github.com/yral-dapp/yral-common.git", rev = "18b20f6bc2caccbdb8af0d16f8e80d1806ea4a79" }
yral-canisters-client = { git = "https://github.com/yral-dapp/yral-common.git", rev = "18b20f6bc2caccbdb8af0d16f8e80d1806ea4a79" }

log = "0.4.27"
cfg-if = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.0"

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[profile.dev]
opt-level = 3
lto = true
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
panic = "unwind"