[package]
name = "yral-mobile-uniffi"
version = "4.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "yral_mobile_uniffi"

[dependencies]
candid = "0.10.10"
cfg-if = "1.0"
ic-agent = "0.49.0"
k256 = { version = "0.13.4", default-features = false, features = [
    "std",
    "jwk",
] }
lazy_static = "1.4"
log = "0.4.27"
once_cell = "1.21.3"
openssl = { version = "0.10.81", features = ["vendored"] }
serde = "=1.0.219"
serde_bytes = "0.11.15"
serde_json = "1.0.132"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
uniffi = { version = "0.28.3", features = ["cli"] }
# Upstream type crates depend on Swagger UI unconditionally. Enabling the
# vendored assets prevents their build script from downloading them in CI.
utoipa-swagger-ui = { version = "9.0.2", features = ["vendored"] }
web-time = "1.1.0"
yral-canisters-client = { git = "https://github.com/dolr-ai/yral-common.git", branch = "main", features = [
    "full",
] }
yral-canisters-common = { git = "https://github.com/dolr-ai/yral-common.git", branch = "main" }
yral-identity = { git = "https://github.com/dolr-ai/yral-common.git", branch = "main", default-features = false, features = [
    "ic-git",
    "wasm-bindgen",
    "ic-agent",
] }
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata.git", branch = "main", default-features = false }
yral-metadata-types = { git = "https://github.com/yral-dapp/yral-metadata.git", branch = "main", default-features = false }
yral-types = { git = "https://github.com/dolr-ai/yral-common.git", branch = "main" }
yral-username-gen = { git = "https://github.com/dolr-ai/yral-common.git", branch = "main" }

# When building inside the monorepo, override git deps with local paths.
# Standalone builds (outside the monorepo) fall back to the git URLs above.
[patch."https://github.com/dolr-ai/yral-common.git"]
yral-canisters-client = { path = "../../../../../yral-common/canisters-client" }
yral-canisters-common = { path = "../../../../../yral-common/canisters-common" }
yral-identity = { path = "../../../../../yral-common/identity" }
yral-types = { path = "../../../../../yral-common/types" }
yral-username-gen = { path = "../../../../../yral-common/username-gen" }

[patch."https://github.com/yral-dapp/yral-metadata.git"]
yral-metadata-client = { path = "../../../../../yral-metadata/client" }
yral-metadata-types = { path = "../../../../../yral-metadata/types" }


[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }


[profile.release]
opt-level = 3
lto = true
panic = "unwind"
